# Memory-Management-Cpp

./: CMakeLists.txt  README.md  makefile
include/: Action.h  Studio.h  Trainer.h  Workout.h
source/: Customer.cpp  Studio.cpp  Workout.cpp
src/: Action.cpp  Studio.cpp  Trainer.cpp  Workout.cpp  main.cpp
